--- a/salsabil_foundation/templates/base.html
+++ b/salsabil_foundation/templates/base.html
@@ -73,11 +73,12 @@
             <div class="row">
                 <div class="col col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
                     <div class="wpo-newsletter">
-                        <h3>Follow us For ferther information</h3>
+                        <h3>Follow us for more information</h3>
                         <div class="wpo-newsletter-form">
-                            <form>
+                            <form method="post" action="{% url 'subscribe' %}">
+                                {% csrf_token %}
                                 <div>
-                                    <input type="text" placeholder="Enter Your Email" class="form-control">
+                                    <input name="sub" type="text" placeholder="Enter Your Email" class="form-control">
                                     <button type="submit">Subscribe</button>
                                 </div>
                             </form>
